lang/flex/fb_practice/fb7-1.output
Rules useless in parser due to conflicts

    4 y: 'A'


State 1 conflicts: 1 reduce/reduce


Grammar

    0 $accept: start $end

    1 start: x 'D' 'B'
    2      | y 'D' 'C'

    3 x: 'A'

    4 y: 'A'


Terminals, with rules where they appear

$end (0) 0
'A' (65) 3 4
'B' (66) 1
'C' (67) 2
'D' (68) 1 2
error (256)


Nonterminals, with rules where they appear

$accept (7)
    on left: 0
start (8)
    on left: 1 2, on right: 0
x (9)
    on left: 3, on right: 1
y (10)
    on left: 4, on right: 2


State 0

    0 $accept: . start $end

    'A'  shift, and go to state 1

    start  go to state 2
    x      go to state 3
    y      go to state 4


State 1

    3 x: 'A' .
    4 y: 'A' .

    'D'       reduce using rule 3 (x)
    'D'       [reduce using rule 4 (y)]
    $default  reduce using rule 3 (x)


State 2

    0 $accept: start . $end

    $end  shift, and go to state 5


State 3

    1 start: x . 'D' 'B'

    'D'  shift, and go to state 6


State 4

    2 start: y . 'D' 'C'

    'D'  shift, and go to state 7


State 5

    0 $accept: start $end .

    $default  accept


State 6

    1 start: x 'D' . 'B'

    'B'  shift, and go to state 8


State 7

    2 start: y 'D' . 'C'

    'C'  shift, and go to state 9


State 8

    1 start: x 'D' 'B' .

    $default  reduce using rule 1 (start)


State 9

    2 start: y 'D' 'C' .

    $default  reduce using rule 2 (start)
